<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuantiSync</string>

    <string name="title_sources">Sources</string>
    <string name="title_preferences">Settings</string>
    <string name="title_history">History</string>

    <string name="app_syncEnabled">Sync active</string>
    <string name="app_syncDisabled">Sync disabled</string>
    <string name="app_notInstalled">Sync disabled</string>

    <string name="status_sync_running">Syncing&#8230;</string>

    <string name="authentication_gettingInfo">Getting account information</string>
    <string name="authentication_signin_title">Sign in or register</string>
    <string name="authentication_signin">Sign in</string>

    <string name="welcome_quantimodo_title"><![CDATA[Welcome to <font color=\"#69959f\">Quantimodo</font>!]]></string>
    <string name="welcome_authenticate">Please sign in with:</string>
    <string name="welcome_authenticate_false">Sign in</string>
    <string name="welcome_authenticate_true">Signed in</string>
    <string name="welcome_done">Start tracking!</string>

    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_history_sync">Sync entire history</string>
    <string name="action_sync">Sync enabled apps</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>

    <string name="pref_header_general">General</string>
    <string name="pref_account">Account</string>

    <string name="pref_user_voice_help">Help</string>
    <string name="pref_user_voice_feedback">Feedback</string>
    <string name="pref_user_voice_contact">Contact Us</string>
    <string name="pref_user_voice_idea">Post an Idea</string>
    <string name="pref_header_feedback">Feedback</string>

    <string name="pref_header_synchronization">Synchronization</string>
    <string name="pref_sync_appdata">Sync tracking apps</string>
    <string name="pref_sync_interval">Sync interval</string>
    <string name="pref_wifiOnly">Sync only on WiFi</string>
    <string name="pref_wifiOnly_true">Syncs run only on WiFi</string>
    <string name="pref_wifiOnly_false">Syncs run on all networks</string>
    <string name="pref_chargingOnly">Sync only when charging</string>
    <string name="pref_chargingOnly_true">Syncs run only when charging, or when the battery is full</string>
    <string name="pref_chargingOnly_false">Syncs run regardless of charging state</string>
    <string name="pref_sync_appdata_enabled">Last synced %1$s</string>
    <string name="pref_sync_appdata_disabled">Apps won\'t be synced</string>
    <string name="pref_sync_appdata_neversynced">Never synced</string>

    <string name="pref_header_mood">Mood</string>
    <string name="pref_mood_schedule">Ask for your mood</string>
    <string name="button_login">Log in</string>
    <string name="tutorial_message_no_root">Root unavailable, please check link bellow to get root access on your phone</string>
    <string name="tutorial_message_access_denied">QuantiModo Sync was denied root access.</string>
    <string name="tutorial_message_access_granted">Root available, access granted</string>
    <string name="tutorial_message_root_avail">Root available...</string>
    <string name="auth_logout">Log out?</string>
    <string name="dialog_ok">ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="oauth_refresh_failed">Failed to refresh token</string>
</resources>